2005-05-04  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/20742
	* gcc.c-torture/compile/20050423-1.c: New test.

2005-05-03  Thomas Koenig  <Thomas.Koenig@online.de>

	Backport from mainline:
	* eor_handling_1.f90: New test case.
	* eor_handling_2.f90: New test case.
	* eor_handling_3.f90: New test case.
	* eor_handling_4.f90: New test case.
	* eor_handling_5.f90: New test case.
	* noadv_size.f90: New test case.
	* pad_no.f90: New test case.

2005-05-02  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2005-03-25  Mark Mitchell  <mark@codesourcery.com>
	* lib/g++.exp (g++_link_flags): Use gcc-set-multilib-library-path.
	(g++_init): Make sure that CXXFLAGS is set.
	* lib/gcc-defs.exp (gcc-set-multilib-library-path): New function.
	* lib/gcc-dg.exp: Use gcc-set-multilib-library-path.
	* lib/gfortran.exp (gfortran_link_flags): Likewise. 
	* lib/objc.exp (objc_init): Likewise.
	* lib/treelang.exp (treelang_init): Likewise.
	2005-03-23  Mark Mitchell  <mark@codesourcery.com>
	* lib/target-supports.exp (check_iconv_available): Default
	libiconv to -liconv, if there is no definition.

2005-05-03  Alexandre Oliva  <aoliva@redhat.com>

	PR target/16888
	* gcc.target/i386/asm-1.c: New test.

2005-05-02  Joseph S. Myers  <joseph@codesourcery.com>

	PR c/15698
	* gcc.dg/builtins-30.c: Update expected messages.
	* gcc.dg/pr15698-1.c, gcc.dg/pr15698-2.c, gcc.dg/pr15698-3.c,
	gcc.dg/pr15698-4.c, gcc.dg/pr15698-5.c, gcc.dg/pr15698-6.c,
	gcc.dg/pr15698-7.c, pr15698-8.c: New tests.

2005-05-02  Mark Mitchell  <mark@codesourcery.com>

	PR c++/15875
	* g++.dg/template/ptrmem14.C: New test.

2005-05-01  Michael Matz  <matz@suse.de>

	PR c++/19542
	* g++.dg/warn/sentinel.C: New testcase for __null sentinels added.

2005-04-29  Michael Matz  <matz@suse.de>

	* gcc.dg/inline-mcpy.c: New test.

2005-04-29  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/13082
	PR fortran/18824
	* gfortran.dg/entry_4.f90: New test.
	* gfortran.fortran-torture/execute/entry_1.f90: New test.